# XV6-Project

./: README.md
Phase_1/: CMakeLists.txt  Makefile  README
Phase_1/kernel/: defs.h  kalloc.c  main.c  proc.c  syscall.c  syscall.h  sysproc.c
Phase_1/user/: user.h  usertest.c  usys.pl
Phase_2/: Makefile  fs.img
Phase_2/kernel/: defs.h  kernel  kernel.asm  kernel.sym  proc.c  proc.h  processes_info.h  rand.c  rand.h  sysTest.c  syscall.c  syscall.h  sysproc.c
Phase_2/mkfs/: mkfs
Phase_2/notxv6/: ph.c
Phase_2/user/: _cat  _echo  _forktest  _grep  _grind  _init  _kill  _ln  _ls  _mkdir  _rm  _sh  _stressfs  _usertests  _uthread  _wc  _zombie  cat.asm  cat.sym  echo.asm  echo.sym  forktest.asm  grep.asm  grep.sym  grind.asm  grind.sym  init.asm  init.sym  kill.asm  kill.sym  ln.asm  ln.sym  ls.asm  ls.sym  mkdir.asm  mkdir.sym  rm.asm  rm.sym  sh.asm  sh.sym  (+12 more)
