cmake_minimum_required(VERSION 3.19)
project(xv6_riscv)

set(CMAKE_CXX_STANDARD 14)

include_directories(kernel)
include_directories(user)

add_executable(xv6_riscv
        .idea/.gitignore
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .idea/xv6-riscv.iml
        cmake-build-debug/Testing/Temporary/LastTest.log
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/xv6_riscv.cbp
        kernel/bio.c
        kernel/bio.d
        kernel/bio.o
        kernel/buf.h
        kernel/console.c
        kernel/console.d
        kernel/console.o
        kernel/defs.h
        kernel/elf.h
        kernel/entry.o
        kernel/entry.S
        kernel/exec.c
        kernel/exec.d
        kernel/exec.o
        kernel/fcntl.h
        kernel/file.c
        kernel/file.d
        kernel/file.h
        kernel/file.o
        kernel/fs.c
        kernel/fs.d
        kernel/fs.h
        kernel/fs.o
        kernel/kalloc.c
        kernel/kalloc.d
        kernel/kalloc.o
        kernel/kernel
        kernel/kernel.asm
        kernel/kernel.ld
        kernel/kernel.sym
        kernel/kernelvec.o
        kernel/kernelvec.S
        kernel/log.c
        kernel/log.d
        kernel/log.o
        kernel/main.c
        kernel/main.d
        kernel/main.o
        kernel/memlayout.h
        kernel/param.h
        kernel/pipe.c
        kernel/pipe.d
        kernel/pipe.o
        kernel/plic.c
        kernel/plic.d
        kernel/plic.o
        kernel/printf.c
        kernel/printf.d
        kernel/printf.o
        kernel/proc.c
        kernel/proc.d
        kernel/proc.h
        kernel/proc.o
        kernel/ramdisk.c
        kernel/riscv.h
        kernel/sleeplock.c
        kernel/sleeplock.d
        kernel/sleeplock.h
        kernel/sleeplock.o
        kernel/spinlock.c
        kernel/spinlock.d
        kernel/spinlock.h
        kernel/spinlock.o
        kernel/start.c
        kernel/start.d
        kernel/start.o
        kernel/stat.h
        kernel/string.c
        kernel/string.d
        kernel/string.o
        kernel/swtch.o
        kernel/swtch.S
        kernel/syscall.c
        kernel/syscall.d
        kernel/syscall.h
        kernel/syscall.o
        kernel/sysfile.c
        kernel/sysfile.d
        kernel/sysfile.o
        kernel/sysproc.c
        kernel/sysproc.d
        kernel/sysproc.o
        kernel/trampoline.o
        kernel/trampoline.S
        kernel/trap.c
        kernel/trap.d
        kernel/trap.o
        kernel/types.h
        kernel/uart.c
        kernel/uart.d
        kernel/uart.o
        kernel/virtio.h
        kernel/virtio_disk.c
        kernel/virtio_disk.d
        kernel/virtio_disk.o
        kernel/vm.c
        kernel/vm.d
        kernel/vm.o
        mkfs/mkfs
        mkfs/mkfs.c
        user/_cat
        user/_echo
        user/_forktest
        user/_grep
        user/_grind
        user/_init
        user/_kill
        user/_ln
        user/_ls
        user/_mkdir
        user/_rm
        user/_sh
        user/_stressfs
        user/_usertests
        user/_wc
        user/_zombie
        user/cat.asm
        user/cat.c
        user/cat.d
        user/cat.o
        user/cat.sym
        user/echo.asm
        user/echo.c
        user/echo.d
        user/echo.o
        user/echo.sym
        user/forktest.asm
        user/forktest.c
        user/forktest.d
        user/forktest.o
        user/grep.asm
        user/grep.c
        user/grep.d
        user/grep.o
        user/grep.sym
        user/grind.asm
        user/grind.c
        user/grind.d
        user/grind.o
        user/grind.sym
        user/init.asm
        user/init.c
        user/init.d
        user/init.o
        user/init.sym
        user/initcode
        user/initcode.asm
        user/initcode.d
        user/initcode.o
        user/initcode.out
        user/initcode.S
        user/kill.asm
        user/kill.c
        user/kill.d
        user/kill.o
        user/kill.sym
        user/ln.asm
        user/ln.c
        user/ln.d
        user/ln.o
        user/ln.sym
        user/ls.asm
        user/ls.c
        user/ls.d
        user/ls.o
        user/ls.sym
        user/mkdir.asm
        user/mkdir.c
        user/mkdir.d
        user/mkdir.o
        user/mkdir.sym
        user/printf.c
        user/printf.d
        user/printf.o
        user/rm.asm
        user/rm.c
        user/rm.d
        user/rm.o
        user/rm.sym
        user/sh.asm
        user/sh.c
        user/sh.d
        user/sh.o
        user/sh.sym
        user/stressfs.asm
        user/stressfs.c
        user/stressfs.d
        user/stressfs.o
        user/stressfs.sym
        user/ulib.c
        user/ulib.d
        user/ulib.o
        user/umalloc.c
        user/umalloc.d
        user/umalloc.o
        user/user.h
        user/user.ld
        user/usertests.asm
        user/usertests.c
        user/usertests.d
        user/usertests.o
        user/usertests.sym
        user/usys.d
        user/usys.o
        user/usys.pl
        user/usys.S
        user/wc.asm
        user/wc.c
        user/wc.d
        user/wc.o
        user/wc.sym
        user/zombie.asm
        user/zombie.c
        user/zombie.d
        user/zombie.o
        user/zombie.sym
        .dir-locals.el
        .editorconfig
        .gdbinit.tmpl-riscv
        .gitignore
        fs.img
        LICENSE
        Makefile
        README)
